--- a/doc/analyse.lyx
+++ b/doc/analyse.lyx
@@ -174,6 +174,10 @@ tokenization
 \end_layout
 
 \begin_layout Enumerate
+FPE integration
+\end_layout
+
+\begin_layout Enumerate
 POS tag and lemma; 
 \end_layout
 
@@ -191,6 +195,51 @@ Reformulation;
 
 \begin_layout Enumerate
 tuple extraction;
+\end_layout
+
+\begin_layout Enumerate
+Omniscience integration; indexing
+\end_layout
+
+\begin_layout Subsection*
+Remarks
+\end_layout
+
+\begin_layout Itemize
+HL refreshing is done on a daily basis;
+\end_layout
+
+\begin_layout Itemize
+FPE may be integrated in this daily process;
+\end_layout
+
+\begin_layout Itemize
+Tokenization is our own; 
+\end_layout
+
+\begin_layout Itemize
+PoS tagging & shallow analysis is done with TreeTagger
+\end_layout
+
+\begin_layout Itemize
+Dependency parsing is done with Turbo Parser from CMU
+\end_layout
+
+\begin_layout Itemize
+Omniscience will be useful to add new indexing entries and for reformulation;
+\end_layout
+
+\begin_layout Itemize
+May be useful to work on the hierarchical relations in Omniscience, to better
+ qualify them;
+\end_layout
+
+\begin_layout Itemize
+Work on terminologies;
+\end_layout
+
+\begin_layout Itemize
+How can we leverage NLM tools, at least for experimental purposes
 \end_layout
 
 \begin_layout Standard
@@ -16201,6 +16250,13 @@ name "cp_types"
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
+\begin_layout Section*
+\begin_inset Newpage pagebreak
 \end_inset
 
 
